# recipe_recommender

./: .gitignore  README.md  correct_search.ipynb  graph_builder_simple.py  graph_model.py  items_rows_pov2vv.json  lora-train-sirius.ipynb  lora_sirius.ipynb  lora_sirius.py  merge_models.py  metrics.py  models.py  models_base.ipynb  pyproject.toml  requirements.txt  stats.py  test.py  validation_pipeline.ipynb  vllm_server.py  vllm_server_sync_eval_matching.py  vlm_connect.py
app/: app.py
llm_validation/: llm_validator.py
models/matcher/: items_dict.json
recsys/: registry.py
recsys/matcher/: llm_matcher_optimized.py  whoosh_matcher.py
recsys/models/llm_recs/: internal_id_names.py  llm_recs_wrapper.py  main.py  (+1 more)
recsys_tests/: eda_cooker.ipynb
src/: clear_pipeline.ipynb  ease_class.py  ease_recommendations_test.txt  metrics_val.py  postprocessing.py
src/ease_model_feat/: config.py  ease_map.py  main_ease.py  main_rec.py  matcher2id.py
src/ease_pipeline/: config.py  ease_map.py  main.py  main_ease.py  matcher2id.py  simple_example.py  top_popular.py
src/ease_popular/: config.py  ease_map.py  input_map.py  main_ease.py  main_rec.py
src/llm_direct_search/: internal_id_names.py
src/llm_pipeline/: llm_output_mapper.py  llm_output_mapper_local.py
src/matcher_llm_feat/: ease_scorer.py  llm_matcher_optimized.py  test_matcher.py  vv_catalog.json  whoosh_matcher.py
src/matching_pipeline/: matcher_class.py
src/preprocess_and_train/: ease_class.ipynb  ease_train.ipynb  eda.ipynb
validation_pipeline/: graph_builder_simple.py  graph_model.py  metrics.py
