[project]
name = "vkusvill_case"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GlebIsrailevich", email = "glebusai308@gmail.com"},
]
dependencies = ["ipykernel>=7.1.0", "polars>=1.35.2", "numpy>=2.3.4", "scipy>=1.16.3", "pandas>=2.3.3", "pyarrow>=22.0.0", "scikit-learn>=1.7.2", "tqdm>=4.67.1", "fastapi>=0.121.2", "uvicorn>=0.38.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
